--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: Polar Alpine & Ski
+  site: 'https://www.polaralpine.com'
   base: '/'
   trailingSlash: false
 
